# ModSecurity

./: .cdtproject  .editorconfig  .gitattributes  .gitignore  .gitmodules  .jupiter  .project  .travis.yml  AUTHORS  BUILD.md  CHANGES  Dockerfile  GSOCProposalModSecurity.html  LICENSE  LICENSE_EXCEPTION  MODSECURITY_LICENSING_EXCEPTION  Makefile  Makefile.am  Makefile.in  NOTICE  README.MD  README.TXT  README.md  README_WINDOWS.TXT  README_WINDOWS.md  SECURITY.md  _config.yml  aclocal.m4  appveyor.yml  authors.txt  autogen.sh  build.sh  config.status  configure  configure.ac  configure~  design.md  docker-compose.yaml  libtool  modsecurity.conf  (+17 more)
apache2/: Makefile  Makefile.am  Makefile.in  Makefile.win  acmp.c  acmp.h  apache2.h  apache2_config.c  apache2_io.c  apache2_util.c  autogen.sh  buildconf  configure  configure.in  mod_security2.c  mod_security2.exp  mod_security2.lib  mod_security2_config.h.in  modsecurity.c  modsecurity.h  modsecurity_config.h  modules.mk  msc-test.c  msc_crypt.c  msc_crypt.h  msc_geo.c  msc_geo.h  msc_gsb.c  msc_gsb.h  msc_json.c  msc_json.h  msc_logging.c  msc_logging.h  msc_logging_json.h  msc_lua.c  msc_lua.h  msc_multipart.c  msc_multipart.h  msc_parsers.c  msc_parsers.h  (+33 more)
apache2/ag_mdb/: ag_mdb.cpp  ag_mdb_external.h  ag_mdb_internal.h  murmur3.c  murmur3.h
apache2/api/: README  mod_op_strstr.c  mod_tfn_reverse.c  mod_var_remote_addr_port.c
apache2/libinjection/: COPYING.txt  README.txt  libinjection.h  libinjection_html5.c  libinjection_html5.h  libinjection_sqli.c  libinjection_sqli.h  libinjection_sqli_data.h  libinjection_xss.c  libinjection_xss.h  sqli_fingerprints.h  sqlparse.c  sqlparse.h  sqlparse_data.h  sqlparse_private.h
apache2/mlogc-src/: Makefile.in  Makefile.win  mlogc-batch-load.pl.in  mlogc-default.conf  mlogc.c
apache2/t/: gen_rx-pm.pl.in  run-regression-tests.pl.in  run-tests.pl  run-tests.pl.in  run-unit-tests.pl.in
apache2/waf_lock/: waf_lock.cpp  waf_lock_external.h  waf_lock_internal.h
apache2/waf_logging/: waf_format.pb.cc  waf_format.pb.h  waf_format.proto  waf_log_util.cc  waf_log_util.h  waf_log_util_external.h  waf_log_util_internal.h
doc/: Makefile  Makefile.am  README.txt  Reference_Manual.html  doxygen-apache.conf  doxygen-apache.in  doxygen-iis.conf  doxygen-iis.in  doxygen-nginx.conf  doxygen-nginx.in  doxygen-standalone.conf  doxygen-standalone.in  doxygen.cfg  hijack-detect.lua  html-chunked.xsl  html.xsl  index.html  main-index.html  migration-matrix.html  migration-matrix.xml  modsecurity-reference.css  modsecurity2-apache-reference.xml  modsecurity2-data-formats.xml  pdf.xsl
doc/Reference_Manual_files/: ajax.js  index.php  index_003.css  index_004.css  wikibits.js
examples/: Makefile.am
examples/configuration_reload/: Makefile.am  basic_rules.conf  test.c
examples/custom_parser_trail/: .custom_driver_trail.cc.kate-swp  Makefile.am  parser  parser.cc
examples/multiprocess_c/: Makefile.am  multi.c
examples/multithread/: Makefile.am  basic_rules.conf  multithread.cc
examples/multithread_c/: Makefile.am  basic_rules.conf  multi.c
examples/reading_logs_via_rule_message/: Makefile.am  blocked_request.conf  blocked_request_engine_on.conf  match.conf  no_match.conf  reading_logs_via_rule_message.h  request_headers_names.conf  simple_request.cc
examples/reading_logs_with_offset/: Makefile.am  read.cc
examples/simple_example_using_c/: Makefile.am  basic_rules.conf  test-valgrind.sh  test.c
examples/using_bodies_in_chunks/: Makefile.am  example.conf  simple_request.cc
ext/: Makefile.am  Makefile.in  README  mod_op_strstr.c  mod_reqbody_example.c  mod_tfn_reverse.c  mod_var_remote_addr_port.c
java/: .gitignore  Makefile.am  ModSecurityJNI.sln  ModSecurityJNI.vcxproj  ModSecurityJNI.vcxproj.filters  Readme.html  org_modsecurity_ModSecurity.c  org_modsecurity_ModSecurity.cpp  org_modsecurity_ModSecurity.h
java/ModSecurityLoader/: build.xml
java/ModSecurityTestApp/: build.xml
mlogc/: INSTALL  Makefile.am  Makefile.in  Makefile.win  mlogc-batch-load.pl  mlogc-batch-load.pl.in  mlogc-default.conf  mlogc.c
others/: Makefile.am
others/mbedtls/: aes.h  base64.c  mbed-tls-config.h  sha1.h
src/: Makefile.am  anchored_set_variable.cc  anchored_set_variable_match_vars.cc  anchored_set_variable_match_vars_names.cc  anchored_variable.cc  assay.cc  audit_log.cc  audit_log.h  audit_log_writer.cc  audit_log_writer.h  audit_log_writer_parallel.cc  audit_log_writer_parallel.h  audit_log_writer_serial.cc  audit_log_writer_serial.h  collections.cc  debug_log.cc  debug_log_writer.cc  debug_log_writer.h  debug_log_writer_agent.cc  debug_log_writer_agent.h  global_variables.cc  macro_expansion.cc  macro_expansion.h  modsecurity.cc  rule.cc  rule.h  rule_marker.h  rule_message.cc  rule_script.cc  rule_script.h  rule_unconditional.cc  rule_unconditional.h  rule_with_actions.cc  rule_with_actions.h  rule_with_actions.h.rej  rule_with_actions_properties.cc  rule_with_actions_properties.h  rule_with_operator.cc  rule_with_operator.h  rules.cc  (+24 more)
src/actions/: accuracy.cc  accuracy.h  action.cc  action.h  action_allowed_in_sec_default_action.h  action_type_rule_metadata.h  action_with_execution.h  action_with_run_time_string.h  allow.cc  allow.h  audit_log.cc  audit_log.h  block.cc  block.h  capture.cc  capture.h  chain.cc  chain.h  ctl_audit_log_parts.cc  ctl_audit_log_parts.h  ctl_request_body_access.cc  (+67 more)
standalone/: .gitignore  Makefile.am  Makefile.in  api.c  api.h  buckets.c  config.c  filters.c  hooks.c  hooks.h  libapr-1.lib  libaprutil-1.lib  libxml2.lib  main.cpp  pcre.lib  regex.c  server.c  standalone.sln  standalone.vcxproj  standalone.vcxproj.filters
test/: Makefile.am  coding_style_suppressions.txt  cppcheck_suppressions.txt  custom-test-driver  regression-tests-valgrind.sh  test-suite.in  test-suite.sh  unit-tests-valgrind.sh  valgrind_suppressions.txt
tests/: CRS_Tests_modsec_dbg.py  Makefile.am  Makefile.in  Parse_test_res.py  config.py  csv_rx-pm.pl.in  msc_test.c  run-regression-tests-nginx.pl  run-regression-tests.pl.in  run-unit-tests.pl.in
validator/: Makefile.am  main.c
(+1335 files in other folders)
